# Tokyo-Python-Devs-AWS-SDK-Pandas-Demo

./: .dockerignore  .env  .gitignore  Dockerfile  README.md  cloudformation_template.yaml  makefile  pyproject.toml
demos/: .dockerignore  01_csv_to_parquet.py  02_athena_query.py  03_excel_to_glue.py  04_dynamodb_write.py  05_dynamodb_lookup.py  06_athena_to_dynamodb_etl.py  Dockerfile  requirements.in  requirements.txt
demos/01_csv_to_parquet/: README.md  boto3.py  wrangler.py
demos/02_athena_query/: README.md  boto3.py  wrangler.py
demos/03_excel_to_glue/: README.md  boto3.py  employees.csv  employees.xlsx  wrangler.py
demos/04_dynamodb_write/: README.md  boto3_version.py  wrangler.py
demos/05_dynamodb_lookup/: README.md  boto3_rename.py  wrangler.py
demos/06_athena_to_dynamodb_etl/: README.md  boto3_version.py  wrangler.py
demos/csv_to_excel/: csv_to_excel.py
